<resources>
    <string name="app_name">making_a_habit</string>

    <!-- activity_main.xml -->
    <string name="mainpage_title">나의 습관</string>

    <!--creatin_habit_page.xml -->
    <string name="creatinghabitpage_title">습관 생성하기</string>
    <string name="creatinghabitpage_subtitle">수행할 습관을 만들어봐요!\n한 번 설정한 습관은 수정할 수 없습니다\n꼭 확인하고 만들어주세요!</string>
    <string name="creatinghabitpage_edittexthint">습관 이름 입력하기</string>
    <string name="creatinghabitpage_habitPeriodtext">수행할 습관 기준을 정해주세요!</string>
    <string name="creatinghabitpage_habitPeriodtime">기간</string>
    <string name="creatinghabitpage_habitPeriodnumber">횟수</string>
    <string name="creatinghabitpage_habitPeriod3">3</string>
    <string name="creatinghabitpage_habitPeriod15">15</string>
    <string name="creatinghabitpage_habitPeriod30">30</string>
    <string name="creatinghabitpage_themecolortext">습관의 테마 색을 골라주세요!</string>
    <string name="creatinghabitpage_creating">생성하기</string>

    <!-- details_habit_page.xml -->
    <string name="detailshabitpage_text">하루에 한 번만 체크할 수 있어요!</string>

    <!-- fragment_complete_dialog.xml -->
    <string name="dialogcomplete_maintitle">습관 완료!</string>
    <string name="dialogcomplete_text">**칸 중 **칸을 완료하셨어요!</string>
    <string name="dialogcomplete_cancel">닫기</string>
    <string name="dialogcomplete_comment">커멘트 작성</string>

    <!-- creating_comments_page.xml -->
    <string name="creatingcommentpage_title">커멘트 작성</string>
    <string name="creatingcommentpage_subtitle">습관을 수행하면서 느낀점, 칭찬, 반성 등을\n작성하면서 자기 자신을 되돌아보세요!</string>
    <string name="creatingcommentpage_edittexthint">커멘트를 작성해주세요.</string>
    <string name="creatingcommentpage_cancelbtn">닫기</string>
    <string name="creatingcommentpage_creatingbtn">완료하기</string>

    <!-- fragment_delete_dialog.xml -->
    <string name="dialogdeletehabit_text">습관을 정말 삭제하실 건가요?\n삭제된 습관은 복구할 수 없어요.</string>
    <string name="dialogdeletehabit_cancel">취소</string>
    <string name="dialogdeletehabit_delete">삭제</string>

    <!-- list_donehabit_page.xml -->
    <string name="listdonehabitpage_text">나의 완료 습관</string>

    <!-- setup_page.xml -->
    <string name="setuppage_title">설정</string>
    <string name="setuppage_alarm">푸시 알림 ON / OFF</string>
    <string name="setuppage_open">오픈소스 라이선스</string>



</resources>