<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CommentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/back_btn_creatingcommentspage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_icon"
            android:importantForAccessibility="no" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_btn_creatingcommentspage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn_creatingcommentspage"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView11"
                style="@style/Text_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creatingcommentpage_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                style="@style/Text_SubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/creatingcommentpage_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/habitName_text_creatingcommentspage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                style="@style/ItemText_Title"/>

            <EditText
                android:id="@+id/habitComemnt_edittext_creatingcommentspage"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="@string/creatingcommentpage_edittexthint"
                android:maxLength="100"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitName_text_creatingcommentspage"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn_creatingcommentspage"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/creatingcommentpage_cancelbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            style="@style/ButtonText"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/creating_btn_creatingcommentspage"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/creatingcommentpage_creatingbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            style="@style/ButtonText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>