<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roundsquare"
    tools:context=".view.dialog.deleteDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#AC6A6A">

        <TextView
            android:id="@+id/title_dialog"
            style="@style/Text_MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dialogcomplete_maintitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_dialog"
            style="@style/Dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn_dialog"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dialogcomplete_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21"
            style="@style/ButtonText" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/complete_btn_dialog"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#F3A7A7"
            android:text="@string/dialogcomplete_comment"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21"
            style="@style/ButtonText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>